Done: display of lobbies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,9 @@
       ],
       "@spartan-ng/ui-menu-helm": [
         ".\\libs/ui/ui-menu-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-table-helm": [
+        ".\\libs/ui/ui-table-helm/src/index.ts"
       ]
     }
   },
