--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "@spartan-ng/ui-table-helm": ["libs/ui/ui-table-helm/src/index.ts"],
+      "@spartan-ng/ui-avatar-helm": ["libs/ui/ui-avatar-helm/src/index.ts"]
+    },
     "outDir": "./out-tsc/app",
     "types": []
   },
