--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,8 +4,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "@spartan-ng/ui-table-helm": ["libs/ui/ui-table-helm/src/index.ts"],
-      "@spartan-ng/ui-avatar-helm": ["libs/ui/ui-avatar-helm/src/index.ts"]
+      "@spartan-ng/ui-table-helm": ["./libs/ui/ui-table-helm/src/index.ts"],
+      "@spartan-ng/ui-avatar-helm": ["./libs/ui/ui-avatar-helm/src/index.ts"],
+      "@spartan-ng/ui-icon-helm": ["./libs/ui/ui-icon-helm/src/index.ts"],
+      "@spartan-ng/ui-menu-helm": ["./libs/ui/ui-menu-helm/src/index.ts"]
     },
     "outDir": "./out-tsc/app",
     "types": []
