--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,7 +15,12 @@
       "@spartan-ng/ui-sonner-helm": ["./libs/ui/ui-sonner-helm/src/index.ts"],
       "@spartan-ng/ui-sheet-helm": ["./libs/ui/ui-sheet-helm/src/index.ts"],
       "@spartan-ng/ui-label-helm": ["./libs/ui/ui-label-helm/src/index.ts"],
-      "@spartan-ng/ui-input-helm": ["./libs/ui/ui-input-helm/src/index.ts"]
+      "@spartan-ng/ui-input-helm": ["./libs/ui/ui-input-helm/src/index.ts"],
+      "@spartan-ng/ui-spinner-helm": ["./libs/ui/ui-spinner-helm/src/index.ts"],
+      "@spartan-ng/ui-card-helm": ["./libs/ui/ui-card-helm/src/index.ts"],
+      "@spartan-ng/ui-command-helm": ["./libs/ui/ui-command-helm/src/index.ts"],
+      "@spartan-ng/ui-popover-helm": ["./libs/ui/ui-popover-helm/src/index.ts"],
+      "@spartan-ng/ui-dialog-helm": ["./libs/ui/ui-dialog-helm/src/index.ts"]
     },
     "outDir": "./out-tsc/app",
     "types": []
